# sabath

./: .bumpversion.cfg  .flake8  .gitignore  Makefile  README.md  setup.cfg
etc/sabath/conda3/: environment.yml
sabath/: __init__.py  __main__.py  argvparse.py  commands.py  executors.py  py2or3.py  utils.py
var/sabath/assets/sabath/: assets.json
var/sabath/assets/sabath/datasets/a/: autoPhaseNN_aicdi.json  autoPhaseNN_aicdi_sample.json
var/sabath/assets/sabath/datasets/c/: cosmoUniverse_2019_05_4parE_tf_v2.json  cosmoUniverse_2019_05_4parE_tf_v2_mini.json
var/sabath/assets/sabath/datasets/m/: miniWeatherML.json
var/sabath/assets/sabath/datasets/n/: nanoconfinement.json
var/sabath/assets/sabath/datasets/p/: ptychonn_20191008_39.json
var/sabath/assets/sabath/models/a/: autophasenn.json
var/sabath/assets/sabath/models/c/: cosmoflow.json
var/sabath/assets/sabath/models/c/cosmoflow/: cosmoflow.json  cosmoflow.patch  cosmoflow_env.sh  requirements.txt
var/sabath/assets/sabath/models/m/: miniWeatherML.json
var/sabath/assets/sabath/models/n/: nanoconfinement.json
var/sabath/assets/sabath/models/p/: ptychonn.json
var/sabath/repos/builtin/datasets/c/: cosmoUniverse_2019_05_4parE_tf_v2_mini.json
var/sabath/repos/builtin/models/c/: cosmoflow.json
