[metadata]
name = sabath
version = attr: sabath.__version__
author = Piotr Luszczek
author_email = luszczek@icl.utk.edu
url = https://github.com/icl-utk-edu/sabath
description = Surrogate AI Benchmarking Applications Testing Harness
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    PyYAML >= 6.0

[options.entry_points]
console_scripts = 
    my-example-utility = sabath.sabath:main

[options.extras_require]
dev = 
    black==22.1.0
    flake8==4.0.1

[options.package_data]
* = README.md